<resources>
    <string name="app_name">Ecomm Chats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="or">OR</string>
    <string name="app_logo">App Logo</string>
    <string name="don_t_have_an_account_contact_us">Don\'t have an account? Contact Us</string>
    <string name="employees">Employees</string>
    <string name="clients">Clients</string>
    <string name="services">Services</string>
    <string name="companies">Companies</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Surname</string>
    <string name="company_name">Company Name</string>
    <string name="select_company">Select Company</string>
    <string name="gst_number">Gst Number</string>
    <string name="aadhar_card">Aadhar Card</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="services_subscribed">Services Subscribed</string>
    <string name="services_name">Services Name</string>
    <string name="submit">Submit</string>
    <string name="enter_text">Enter Text</string>
    <string name="example_gmail">abc@gmail.com</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="association_date">Association Date</string>
    <string name="phone">Phone</string>
    <string name="block">Block</string>
    <string name="delete">Delete</string>
    <string name="logout">Log Out</string>
    <string name="done">Done</string>
    <string name="select_user">Select User</string>
    <string name="new_group">New Group</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="select_service">Select Service</string>
    <string name="first_name_required">First Name Required</string>
    <string name="last_name_required">Surname Required</string>
    <string name="company_name_required">Company Name Required</string>
    <string name="gst_number_is_incorrect">GST Number Required</string>
    <string name="aadhar_number_is_incorrect">Aadhar Number Required</string>
    <string name="email_is_incorrect">Email Required</string>
    <string name="password_required">Password Required</string>
    <string name="confirm_password_required">Confirm Password Required</string>
    <string name="services_required">Services Required</string>
    <string name="service_name_required">Service Name Required</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="profile_photo">Profile photo</string>
    <string name="password_mismatch">Password Mis-match</string>
    <string name="add_company">Add Company</string>
    <string name="add_client">Add Client</string>
    <string name="add_employee">Add Employee</string>>
    <string name="add_service">Add Service</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="yes_change">Yes, change field</string>
    <string name="product_field_change_title">Are you sure you want to change the %s?</string>
    <string name="confirm_message_for_clear_details_dialog">%s will be deleted. Do you wish to proceed?</string>
    <string name="confirm_delete">Yes, delete</string>
    <string name="confirm_cancel_btn">No, cancel</string>
    <string name="update_phone_number">Update Phone Number</string>
    <string name="enter_ten_digit_phone_number">Enter 10-digit phone number</string>
    <string name="size">%d</string>
    <string name="password_length">Password length should be greater than or equal to 6</string>
    <string name="members">%d members</string>
    <string name="update_group_name">Update Group Name</string>
    <string name="group_profile">Group Profile</string>
    <string name="yes_remove">Yes, remove</string>
    <string name="no_cancel">No, cancel</string>
    <string name="confirm_message_for_remove_details_dialog">%s will be removed. Do you wish to proceed?</string>
    <string name="you_cannot_remove_yourself">You cannot remove yourself</string>
    <string name="add_members">Add Members</string>
    <string name="profile">Profile</string>
    <string name="are_you_sure_you_want_to_end_this_call">Are you sure you want to end this call?</string>
    <string name="yes_end">Yes, End Call</string>
    <string name="yes_join">Yes, Join</string>
    <string name="no_join">No</string>
    <string name="call_in_progress">A call is in progress. Join now to listen"</string>

    <string name="delete_account">Delete Account</string>
    <string name="hello">Hello %s!</string>
    <string name="having_business_n_doubts">Having business \n doubts?</string>
    <string name="chat_with_Professional">Chat with our professionals and solve all your doubts</string>
    <string name="grow_business_anytime">Grow business anytime</string>
</resources>