<?xml version="1.0" encoding="utf-8"?>

<!--
    NOTE: I should have written all the "styling" code in the "@styles/" folder (Theme) ... Because all these
    styling will be reused for registration fragment!! I should have done all styling in "styles" folder
    and then just have to write 1-line ! :          style= "@style/btn_login_reg"  just like I did for the
    button!(See the code of AppCompatButton, just one line code, it is a better practice to use "style" folder,
    because it provides uniformity in style and I don't
    have to worry about providing similar background/ padding/ textSize/ textColor/margin
     for both "registration and login" fragment,
    both will have everything same... since both will use same folder

    Also! There are 2 themes folder, one for light mode other for dark, make sure to write theme for both!!
    U can create custom styling for both dark and light mode! Another advantage of theme-styling..
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.loginActivity.MainActivity"
    style="@style/bg_login_reg">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvLogin"
        style="@style/tv_title_login_reg"
        android:text="@string/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin">


        <EditText
            android:id="@+id/etEmail"
            style="@style/et_login"
            android:hint="@string/email"
            android:drawableStart="@drawable/drawable_start_email"
            android:padding="10dp" />


        <EditText
            android:id="@+id/etPassword"
            style="@style/et_login"
            android:hint="@string/password"
            android:drawableStart="@drawable/drawable_start_password"
            android:inputType="textPassword"
            android:padding="10dp"
            tools:ignore="LabelFor" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="@style/btn_login_reg"
            android:text="@string/login" />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/or"
        android:textColor="@color/Black_9"
        android:textSize="16sp" />


    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="7dp"
        app:layout_constraintTop_toTopOf="@+id/tvOr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvOr"
        app:layout_constraintBottom_toBottomOf="@+id/tvOr"
        android:background="@color/Black_e"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="7dp"
        app:layout_constraintTop_toTopOf= "@+id/tvOr"
        app:layout_constraintStart_toEndOf= "@+id/tvOr"
        app:layout_constraintEnd_toEndOf= "parent"
        app:layout_constraintBottom_toBottomOf= "@+id/tvOr"
        android:background="@color/Black_e"
        />



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCreateNewAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tvOr"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/don_t_have_an_account_contact_us"
        android:textColor="@color/Black_a"
        app:layout_constraintVertical_bias="0.3"
        android:textSize="16sp" />

<!--    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />-->

</androidx.constraintlayout.widget.ConstraintLayout>