<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_background_white"
    android:paddingHorizontal="@dimen/DP24"
    android:paddingTop="@dimen/DP24"
    android:paddingBottom="@dimen/DP13"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/SP18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:lineSpacingExtra="@dimen/DP5"
        android:text="@string/confirm_message_for_clear_details_dialog" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/DP5"
        android:layout_marginTop="@dimen/DP20"
        android:textSize="@dimen/SP14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCancel"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:textColor="@color/Red"
        android:lineSpacingExtra="@dimen/DP5"
        android:text="@string/confirm_delete" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/DP5"
        android:layout_marginTop="@dimen/DP20"
        android:textSize="@dimen/SP14"
        app:layout_constraintStart_toEndOf="@id/btnDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:textColor="@color/blue_button_close"
        android:lineSpacingExtra="@dimen/DP5"
        android:text="@string/confirm_cancel_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>