<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.user.bottomsheet.ServiceBottomSheetFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/close_blue"
        android:visibility="visible"
        android:layout_marginHorizontal="@dimen/DP10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/DP10"
        android:gravity="center"
        android:text="@string/select_service"
        android:textColor="@color/black"
        android:textSize="@dimen/SP25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etSearchBar"
        android:layout_width="@dimen/DP0"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        android:textColorHint="#3c3c43"
        android:textSize="@dimen/SP16"
        android:maxLines="1"
        android:drawableStart="@drawable/search_24px"
        android:drawablePadding="@dimen/DP4"
        android:background="@drawable/et_search_bar_bg"
        android:layout_marginHorizontal="@dimen/DP10"
        android:padding="@dimen/DP10"
        android:layout_marginTop="@dimen/DP10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvService"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DP0"
        android:layout_marginHorizontal="@dimen/DP10"
        android:orientation="vertical"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintBottom_toTopOf="@+id/submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSearchBar"
        tools:itemCount="10"
        tools:listitem="@layout/service_list_item" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/DP20"
        android:layout_marginTop="@dimen/DP20"
        android:backgroundTint="@color/blue_common_button"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>